--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
+		
+		<!-- Grow.me Script с правильным site-id -->
 		<script data-grow-initializer="">
 			!(function () {
 				window.growMe ||
@@ -22,19 +24,23 @@
 					(e.defer = !0),
 					e.setAttribute(
 						'data-grow-faves-site-id',
-						'U2l0ZTpkOTkwN2JjMy1jNDIxLTRlZjktYWM0YS03MDZjNzRkOTYxM2Q='
+						'U2l0ZTphODMwYWZiNi04ZGQ2LTRkMjYtOGQzOS1mNzZkMDU1NTE0ZWU='
 					)
 				var t = document.getElementsByTagName('script')[0]
 				t.parentNode.insertBefore(e, t)
 			})()
 		</script>
+		
+		<!-- ScriptWrapper Script с правильным ID -->
 		<script
 			type="text/javascript"
 			async="async"
 			data-noptimize="1"
 			data-cfasync="false"
-			src="//scripts.scriptwrapper.com/tags/d9907bc3-c421-4ef9-ac4a-706c74d9613d.js"
+			src="//scripts.scriptwrapper.com/tags/a830afb6-8dd6-4d26-8d39-f76d055514ee.js"
 		></script>
+		
+		<!-- Yadro.ru Counter -->
 		<script type="text/javascript">
 			<!--
 			new Image().src =
